# obenchara

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.md
api/oapi/: Dockerfile-editor  Dockerfile-ui  docker-compose.yml  oapi.yaml
api/oapi/components/schemas/interfaces/: sight_categories.yaml
api/oapi/components/schemas/sight_categories/: sight_category.yaml
modules/infrastructure/: Cargo.toml
modules/infrastructure/src/api/: server.rs
modules/infrastructure/src/db/: psql.rs
src/: main.rs
